k8s/ocr-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ocr-service
  namespace: default
spec:
  selector:
    app: ocr-service
  ports:
    - port: 12000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr-service
  namespace: default
  labels:
    app: ocr-service
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: ocr-service
  template:
    metadata:
      labels:
        app: ocr-service
    spec:
      containers:
        - name: ocr-service
          image: "bojanbulatovic/ocr-service:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 12000
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 12000
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 2
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 12000
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
