k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pisio-redis-service
  namespace: default
spec:
  selector:
    app: pisio-redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pisio-redis
spec:
  selector:
    matchLabels:
      app: pisio-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: pisio-redis
    spec:
      containers:
        - name: redis-master
          image: gcr.io/google_containers/redis:e2e
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data/redis
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pv-claim
