k8s/ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pisio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - http:
        paths:
          - path: /auth/(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 10000
          - path: /adminer
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
          - path: /images/(.*)
            pathType: Prefix
            backend:
              service:
                name: file-service
                port:
                  number: 11000
          - path: /communication/(.*)
            pathType: Prefix
            backend:
              service:
                name: communication-service
                port:
                  number: 15000
